Inconsistent texture mask paint results #35355

Closed
opened 2013-05-14 19:53:02 +02:00 by N Greene · 9 comments

%%%--- Operating System, Graphics card ---
win7, nvidia gtx 560ti

- Blender version with error, and version that worked ---

error in version r56782

- Short description of error ---

Paint strokes with texture mask and rake enabled produce different in 3d view port and image/uv editor

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

in the image file (issue.jpg) attached

a) is a paint stroke drawn in the 3d viewport
b) is a paint stroke drawn in the uv/image editor

they have the same settings but appear to produce different results.Blend file attached with packed texture

%%%

%%%--- Operating System, Graphics card --- win7, nvidia gtx 560ti - Blender version with error, and version that worked --- error in version r56782 - Short description of error --- Paint strokes with texture mask and rake enabled produce different in 3d view port and image/uv editor - Steps for others to reproduce the error (preferably based on attached .blend file) --- in the image file (issue.jpg) attached a) is a paint stroke drawn in the 3d viewport b) is a paint stroke drawn in the uv/image editor they have the same settings but appear to produce different results.Blend file attached with packed texture %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%i'm not sure if its an issue of how much you zoom in or not.

but at one point it was consistent no matter how much I zoomed,then when I changed the texture image,i got strange results.I can't be sure what the correct behavior is.%%%

%%%i'm not sure if its an issue of how much you zoom in or not. but at one point it was consistent no matter how much I zoomed,then when I changed the texture image,i got strange results.I can't be sure what the correct behavior is.%%%

%%%Closed duplicate report:
http://projects.blender.org/tracker/index.php?func=detail&aid=35371&group_id=9&atid=498

There is a bug here indeed, the texture size should not depend on zoom.%%%

%%%Closed duplicate report: http://projects.blender.org/tracker/index.php?func=detail&aid=35371&group_id=9&atid=498 There is a bug here indeed, the texture size should not depend on zoom.%%%
Author

%%%I don't know if its of any use,but I forgot to mention I was using a wacom tablet stylus.%%%

%%%I don't know if its of any use,but I forgot to mention I was using a wacom tablet stylus.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%but brecht,I don't think the problem is solved,are the brush strokes supposed to be effected by the zoom in the 3d viewport too?

what I mean is,if you have two windows open (3d viewport and the uv/image editor) and texture paint mode enabled in both of these,if you then then change the brush radius inside the 3d viewport,you will see that the brush radius size updates in the image editor too.So why is that,the brush size doesn't appear the same when working in both.

this was the main concern of this report.and thats what I meant by the brush size not being consistent between the 3d viewport texture mode,and 2d paint texture mode.

maybe i'm not being clear enough?

%%%

%%%but brecht,I don't think the problem is solved,are the brush strokes supposed to be effected by the zoom in the 3d viewport too? what I mean is,if you have two windows open (3d viewport and the uv/image editor) and texture paint mode enabled in both of these,if you then then change the brush radius inside the 3d viewport,you will see that the brush radius size updates in the image editor too.So why is that,the brush size doesn't appear the same when working in both. this was the main concern of this report.and thats what I meant by the brush size not being consistent between the 3d viewport texture mode,and 2d paint texture mode. maybe i'm not being clear enough? %%%

%%%In the image editor the brush size is relative to the image, like e.g. photoshop or gimp. In the 3D viewport the method used is projection painting, where you're kind of painting on the viewport and that's projected onto the 3D model.

That's intentional behavior as far as I can tell, they're different painting paradigms. It could be useful if there was some option to paint in 3D with a fixed size in texture space, but that would be a new feature, and is not so obvious with arbitrary UV mapping to the 2D image.%%%

%%%In the image editor the brush size is relative to the image, like e.g. photoshop or gimp. In the 3D viewport the method used is projection painting, where you're kind of painting on the viewport and that's projected onto the 3D model. That's intentional behavior as far as I can tell, they're different painting paradigms. It could be useful if there was some option to paint in 3D with a fixed size in texture space, but that would be a new feature, and is not so obvious with arbitrary UV mapping to the 2D image.%%%
Author

%%%that makes,sense.

thanks for the fix.%%%

%%%that makes,sense. thanks for the fix.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35355
No description provided.