Fix #35355: 2D image paint View mapping mode was dependent on zoom, this was wrong, it should just fit the texture in the brush circle.